--- a/src/index.html
+++ b/src/index.html
@@ -35,37 +35,55 @@
     <canvas class="webgl"></canvas>
     <div class="main">
       <div class="main-title">
-        <p>Hello, World, my name is</p>
+        <p id="helloWorld">Hello, World, my name is</p>
         <h1>Alexandre Leitão Santos.</h1>
-        <h2>I build things for the web.</h2>
-        <p>
+        <h2 id="iDo">I build things for the web.</h2>
+        <p id="presentation">
           I’m a software engineer specializing in building (and occasionally designing) exceptional
           digital experiences. Currently, I’m focused on building accessible, human-centered
           products at Upstatement.
         </p>
         <p>
-          <span class="en-changer">en</span>
+          <span title="English" class="en-changer">en</span>
           |
-          <span class="fr-changer">fr</span>
+          <span title="Français" class="fr-changer">fr</span>
           |
-          <span class="pt-changer">pt</span>
+          <span title="Português" class="pt-changer">pt</span>
         </p>
       </div>
-      <div class="social-icons">
-        <i class="fa-solid fa-square-envelope"></i>
-        <i class="fa-brands fa-github-square"></i>
-        <i class="fa-brands fa-linkedin"></i>
+      <div class="social-icons-box">
+        <a
+          target="_blank"
+          rel="external"
+          title="Check my code!"
+          href="https://github.com/aleitaosantos/myportfolio"
+          ><div class="social-icons"><i class="fa-solid fa-code"></i></div
+        ></a>
+        <a
+          target="_blank"
+          rel="external"
+          title="My GitHub profile"
+          href="https://github.com/aleitaosantos/"
+          ><div class="social-icons"><i class="fa-brands fa-github"></i></div
+        ></a>
+        <a
+          target="_blank"
+          rel="external"
+          title="My LinkedIn profile"
+          href="https://www.linkedin.com/in/alexandreleitao/"
+          ><div class="social-icons"><i class="fa-brands fa-linkedin-in"></i></div
+        ></a>
       </div>
     </div>
     <div class="box">
       <div class="container">
         <div class="bar">
           <div>
-            <span class="en-changer">en</span>
+            <span title="English" class="en-changer">en</span>
             |
-            <span class="fr-changer">fr</span>
+            <span title="Français" class="fr-changer">fr</span>
             |
-            <span class="pt-changer">pt</span>
+            <span title="Português" class="pt-changer">pt</span>
           </div>
           <div><span class="closer">×</span></div>
         </div>
