--- a/src/boxdummy.html
+++ b/src/boxdummy.html
@@ -35,144 +35,9 @@
             <h3>Degrees</h3>
             <div class="title-flex">
               <h3>Master of Science</h3>
-              <p>mar 2011 - may 2014</p>
+              <img class="portrait" src="image/portrait.png" alt="Alexandre's portrait" />
             </div>
-            <p>
-              <a target="_blank" rel="external" href="https://www5.usp.br/#english"
-                >University of São Paulo <i class="fa-solid fa-arrow-up-right-from-square"></i></a
-              ><br />
-              <a target="_blank" rel="external" href="https://www.iau.usp.br/"
-                >Institute of Architecture and Urbanism
-                <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
-            <p>
-              Master's Thesis:<br />
-              <a
-                target="_blank"
-                rel="external"
-                href="https://teses.usp.br/teses/disponiveis/102/102132/tde-20012015-093731/en.php"
-                >Useful landscape: Tietê River and São Paulo urbanization (1966-1986)
-                <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
-            <div class="title-flex">
-              <h3>Architecture and Urbanism</h3>
-              <p>feb 2004 - dec 2009</p>
-            </div>
-            <p>
-              <a target="_blank" rel="external" href="https://www5.usp.br/#english"
-                >University of São Paulo <i class="fa-solid fa-arrow-up-right-from-square"></i></a
-              ><br />
-              <a target="_blank" rel="external" href="https://eesc.usp.br/en/"
-                >São Carlos School of Engineering
-                <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
-            <p>
-              Graduation Project:<br />
-              <a
-                target="_blank"
-                rel="external"
-                href="http://repositorio.iau.usp.br/handle/RIIAU/112"
-                >Metropolitan Maritime Terminals: infrastructure and landscape of a city at water's
-                edge <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
-            <h3>.Courses</h3>
-            <div class="title-flex">
-              <h3>Three.js Journey</h3>
-              <p>2022</p>
-            </div>
-            <p>
-              <a target="_blank" rel="external" href="https://threejs-journey.com/"
-                >Bruno Simon <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
-            <div class="title-flex">
-              <h3>Git & Github Bootcamp</h3>
-              <p>2022</p>
-            </div>
-            <p>
-              <a
-                target="_blank"
-                rel="external"
-                href="https://www.udemy.com/course/git-and-github-bootcamp/"
-                >Udemy / Colt Steele <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
-            <div class="title-flex">
-              <h3>Modern React Bootcamp</h3>
-              <p>2021</p>
-            </div>
-            <p>
-              <a
-                target="_blank"
-                rel="external"
-                href="https://www.udemy.com/course/modern-react-bootcamp/"
-                >Udemy / Colt Steele <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
-            <div class="title-flex">
-              <h3>Web Developer Bootcamp</h3>
-              <p>2021</p>
-            </div>
-            <p>
-              <a
-                target="_blank"
-                rel="external"
-                href="https://www.udemy.com/course/the-web-developer-bootcamp/"
-                >Udemy / Colt Steele <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
-            <div class="title-flex">
-              <h3>Digital Product Design (UX & UI)</h3>
-              <p>2021</p>
-            </div>
-            <p>
-              <a
-                target="_blank"
-                rel="external"
-                href="https://www.udemy.com/course/master-digital-product-design-ux-research-ui-design/"
-                >Udemy / Rob Sutcliffe <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
-            <div class="title-flex">
-              <h3>Management for Design Offices</h3>
-              <p>2014</p>
-            </div>
-            <p>
-              <a target="_blank" rel="external" href="https://www.senac.br/"
-                >Senac <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
-            <div class="title-flex">
-              <h3>Revit Architecture</h3>
-              <p>2012</p>
-            </div>
-            <p>
-              <a target="_blank" rel="external" href="https://drc.org.br/"
-                >DRC Training and Consulting <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
-            <div class="title-flex">
-              <h3>V-Ray</h3>
-              <p>2010</p>
-            </div>
-            <p>
-              <a target="_blank" rel="external" href="https://www.cadritech.com.br/"
-                >Cadritech <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
-            <div class="title-flex">
-              <h3>Digital 3D Modeling</h3>
-              <p>2010</p>
-            </div>
-            <p>
-              <a target="_blank" rel="external" href="https://www.cadritech.com.br/"
-                >Cadritech <i class="fa-solid fa-arrow-up-right-from-square"></i
-              ></a>
-            </p>
+
             <!-- END HTML INSERT -->
           </div>
           <div id="backToBoxTop"><i class="fa-solid fa-angles-up"></i></div>
