--- a/src/index.html
+++ b/src/index.html
@@ -35,15 +35,11 @@
     <canvas class="webgl"></canvas>
     <div class="main">
       <div class="main-title">
-        <p id="helloWorld">Hello, World, my name is</p>
-        <h1>Alexandre Leitão Santos.</h1>
-        <h2 id="iDo">I build things for the web.</h2>
-        <p id="presentation">
-          I’m a software engineer specializing in building (and occasionally designing) exceptional
-          digital experiences. Currently, I’m focused on building accessible, human-centered
-          products at Upstatement.
-        </p>
-        <p>
+        <p id="helloWorld"></p>
+        <h1 id="myName"></h1>
+        <h2 id="iDo"></h2>
+        <p id="presentation"></p>
+        <p id="mainIdiomChangers">
           <span title="English" class="en-changer">en</span>
           |
           <span title="Français" class="fr-changer">fr</span>
