--- a/src/boxdummy.html
+++ b/src/boxdummy.html
@@ -31,18 +31,156 @@
         <div class="scroll">
           <div id="boxContent">
             <!-- INSERT HTML HERE -->
-            <h2 id="boxTitle">Education</h2>
-            <h3>Degrees</h3>
-            <div class="title-flex">
-              <h3>Master of Science</h3>
-              <img class="portrait" src="image/portrait.png" alt="Alexandre's portrait" />
-            </div>
-
-            <svg class="hamburger" width="40px" height="40px" viewBox="0 0 40 40">
-              <line x1="10" y1="15" x2="30" y2="15" />
-              <line x1="10" y1="20" x2="30" y2="20" />
-              <line x1="10" y1="25" x2="30" y2="25" />
-            </svg>
+            <header>
+              <h2>Educação</h2>
+            </header>
+            <section>
+              <h3>Títulos</h3>
+              <div class="title-flex">
+                <h4>Mestrado em ciências</h4>
+                <p>mar 2011 – mai 2014</p>
+              </div>
+              <p>
+                <a target="_blank" rel="external" href="https://www5.usp.br/"
+                  >Universidade de São Paulo
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i></a
+                ><br />
+                <a target="_blank" rel="external" href="https://www.iau.usp.br/"
+                  >Instituto de Arquitetura e Urbanismo
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+              <p>
+                Dissertação de mestrado:<br />
+                <a
+                  target="_blank"
+                  rel="external"
+                  href="https://teses.usp.br/teses/disponiveis/102/102132/tde-20012015-093731/pt-br.php"
+                  >Paisagem útil: o Rio Tietê e a urbanização paulistana (1966 - 1986)
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+              <div class="title-flex">
+                <h4>Arquitetura e Urbanismo</h4>
+                <p>fev 2004 - dez 2009</p>
+              </div>
+              <p>
+                <a target="_blank" rel="external" href="https://www5.usp.br/"
+                  >Universidade de São Paulo
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i></a
+                ><br />
+                <a target="_blank" rel="external" href="https://eesc.usp.br/en/"
+                  >Escola de Engenharia de São Carlos
+                  <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+              <p>
+                Projeto de graduação:<br />
+                <a
+                  target="_blank"
+                  rel="external"
+                  href="http://repositorio.iau.usp.br/handle/RIIAU/112"
+                  >Terminais Marítimos Metropolitanos: infraestrutura e paisagem de uma cidade à
+                  borda d’água <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+            </section>
+            <section>
+              <h3>Cours</h3>
+              <div class="title-flex">
+                <h4>Three.js Journey</h4>
+                <p>2022</p>
+              </div>
+              <p>
+                <a target="_blank" rel="external" href="https://threejs-journey.com/"
+                  >Bruno Simon <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+              <div class="title-flex">
+                <h4>Git & Github Bootcamp</h4>
+                <p>2022</p>
+              </div>
+              <p>
+                <a
+                  target="_blank"
+                  rel="external"
+                  href="https://www.udemy.com/course/git-and-github-bootcamp/"
+                  >Udemy / Colt Steele <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+              <div class="title-flex">
+                <h4>Modern React Bootcamp</h4>
+                <p>2021</p>
+              </div>
+              <p>
+                <a
+                  target="_blank"
+                  rel="external"
+                  href="https://www.udemy.com/course/modern-react-bootcamp/"
+                  >Udemy / Colt Steele <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+              <div class="title-flex">
+                <h4>Web Developer Bootcamp</h4>
+                <p>2021</p>
+              </div>
+              <p>
+                <a
+                  target="_blank"
+                  rel="external"
+                  href="https://www.udemy.com/course/the-web-developer-bootcamp/"
+                  >Udemy / Colt Steele <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+              <div class="title-flex">
+                <h4>Digital Product Design (UX & UI)</h4>
+                <p>2021</p>
+              </div>
+              <p>
+                <a
+                  target="_blank"
+                  rel="external"
+                  href="https://www.udemy.com/course/master-digital-product-design-ux-research-ui-design/"
+                  >Udemy / Rob Sutcliffe <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+              <div class="title-flex">
+                <h4>Gerenciamento de Escritórios de Arquitetura e Design</h4>
+                <p>2014</p>
+              </div>
+              <p>
+                <a target="_blank" rel="external" href="https://www.senac.br/"
+                  >Senac <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+              <div class="title-flex">
+                <h4>Revit Architecture</h4>
+                <p>2012</p>
+              </div>
+              <p>
+                <a target="_blank" rel="external" href="https://drc.org.br/"
+                  >DRC Training and Consulting <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+              <div class="title-flex">
+                <h4>V-Ray</h4>
+                <p>2010</p>
+              </div>
+              <p>
+                <a target="_blank" rel="external" href="https://www.cadritech.com.br/"
+                  >Cadritech <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+              <div class="title-flex">
+                <h4>Modelagem Digital 3D</h4>
+                <p>2010</p>
+              </div>
+              <p>
+                <a target="_blank" rel="external" href="https://www.cadritech.com.br/"
+                  >Cadritech <i class="fa-solid fa-arrow-up-right-from-square"></i
+                ></a>
+              </p>
+            </section>
 
             <!-- END HTML INSERT -->
           </div>
