--- a/src/boxdummy.html
+++ b/src/boxdummy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="icon" type="image/svg" href="image/favicon.svg" />
+    <link rel="icon" type="image/svg" href="favicon.svg" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="stylesheet.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
