--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
     <meta name="description" content="Enter description here." />
-    <link rel="icon" type="image/svg" href="favicon.svg" />
+    <!-- <link rel="icon" type="image/svg" href="favicon.svg" /> -->
     <meta name="theme-color" content="#ffffff" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -32,7 +32,6 @@
         />
       </svg>
     </div>
-    <canvas class="webgl"></canvas>
     <div class="main">
       <div class="main-title">
         <p id="helloWorld"></p>
@@ -89,5 +88,6 @@
         </div>
       </div>
     </div>
+    <canvas class="webgl"></canvas>
   </body>
 </html>
