--- a/src/boxdummy.html
+++ b/src/boxdummy.html
@@ -32,320 +32,56 @@
           <div id="boxContent">
             <!-- INSERT HTML HERE -->
             <header>
-              <h2>Competências</h2>
+              <h2>Contato</h2>
             </header>
             <section>
-              <h3>Linguagens de Programação</h3>
-              <p>
-                Aprendi a maioria destas linguagens a partir de necessidades reais, através de
-                autoaprendizagem com o auxílio de cursos ou livros e colocando imediatamente em
-                prática os conhecimentos adquiridos. Meu objetivo é conhecer a base de tantas
-                linguagens quanto possível ao mesmo tempo em que aprofundo o conhecimento das mais
-                necessárias.
-              </p>
-              <div class="percent-container">
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc080">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">CSS</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc080">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">HTML</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc060">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">JavaScript</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc040">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">PHP</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc020">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Python</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc020">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">TypeScript</div>
-                  </div>
+              <p>Entre em contato comigo através do formulário abaixo, meu e-mail ou minha rede social. Ficarei muito feliz em receber sua mensagem.</p>
+              <form class="form" name="contact" netlify>                
+                <p><input
+                  type="text"
+                  name="name"
+                  placeholder="Seu nome"
+                  required
+                  ></input></p>  
+                <p><input
+                  type="email"
+                  name="email"
+                  placeholder="Seu e-mail"
+                  required></input></p>
+                <p><textarea                  
+                  rows="10"
+                  name="message"
+                  placeholder="Sua mensagem"
+                  required></textarea></p>                
+              </form>
+              <div class="form-buttons">
+                <div>
+                  <a                    
+                    rel="author"
+                    title="E-mail"
+                    href="mailto:alexandre.leitao.santos@gmail.com"
+                    ><div class="social-icons"><i class="fa-solid fa-envelope"></i></div
+                  ></a>
+                  <a
+                    target="_blank"
+                    rel="external"
+                    title="Meu perfil GitHub"
+                    href="https://github.com/aleitaosantos/"
+                    ><div class="social-icons"><i class="fa-brands fa-github"></i></div
+                  ></a>
+                  <a
+                    target="_blank"
+                    rel="external"
+                    title="Meu perfil LinkedIn"
+                    href="https://www.linkedin.com/in/alexandreleitao/"
+                    ><div class="social-icons"><i class="fa-brands fa-linkedin-in"></i></div
+                  ></a>
+              </div>
+                <div>
+                  <button type="submit" form="contact">Enviar</button>
                 </div>
               </div>
-              <h3>Recursos de Desenvolvimento</h3>
-              <p>
-                Procuro conhecer bem o que o mainstream exige, com foco no que há de mais moderno,
-                mas também tenciono aprender recursos menos utilizados, porém com forte capacidade
-                de auxiliar nos meus projetos.
-              </p>
-              <div class="percent-container">
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc060">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Bootstrap</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc060">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Bulma</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc060">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Git / Github</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc040">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">JQuery</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc040">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">MongoDB</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc060">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Node.js</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc080">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">React</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc060">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Three.js</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc040">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Wordpress</div>
-                  </div>
-                </div>
-              </div>
-              <h3>Ferramentas de Design</h3>
-              <p>
-                Este grupo de competências vai além de permitir a possibilidade de interação com os
-                profissionais de UX/UI. É um conjunto de ferramentas com o qual tenho imensa
-                familiaridade desde muito cedo na minha carreira.
-              </p>
-              <div class="percent-container">
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc060">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Adobe Illustrator</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc080">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Adobe InDesign</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc080">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Adobe Photoshop</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc060">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Adobe XD</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc060">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Affinity</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc080">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Figma</div>
-                  </div>
-                </div>
-              </div>
-              <h3>Desenho e Modelagem 3D</h3>
-              <p>
-                Este conjunto é, provavelmente, o que eu tenho mais tempo de experiência e alto
-                domínio, já que são ferramentas que foram amplamente utilizadas durante minha
-                carreira como arquiteto e professor.
-              </p>
-              <div class="percent-container">
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc060">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Adobe Substance 3D</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc100">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Autodesk AutoCAD</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc100">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Autodesk Revit</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc080">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Blender</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc080">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Rhinoceros 3D + Grasshopper</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc100">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">SketchUp</div>
-                  </div>
-                </div>
-              </div>
-              <h3>Recursos de Produtividade</h3>
-              <p>
-                As experiências em empresas anteriores me colocaram em contato com recursos que
-                aprendi a reconhecer como necessários para o bom desempenho das equipes de projetos.
-              </p>
-              <div class="percent-container">
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc060">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Metodologia Agile/Scrum</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc080">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Google Workspace</div>
-                  </div>
-                </div>
-                <div class="percent-box">
-                  <div class="percent">
-                    <svg class="perc080">
-                      <circle cx="50" cy="50" r="50"></circle>
-                      <circle cx="50" cy="50" r="50"></circle>
-                    </svg>
-                    <div class="perc-label">Microsoft 365</div>
-                  </div>
-                </div>
-              </div>
+              <p></p>
             </section>
 
             <!-- END HTML INSERT -->
