Projects PT inserted

--- a/src/boxdummy.html
+++ b/src/boxdummy.html
@@ -36,12 +36,20 @@
             </header>
             <section>
               <h3>Projetos para a Web</h3>
+              <h4>Autorais</h4>
               <div class="project-container">
                 <div class="project-boxes">
                   <div class="project-box">
                     <div class="icons">
-                      <i class="fa-brands fa-github"></i>
-                      <i class="fa-solid fa-up-right-from-square"></i>
+                      <a
+                        target="_blank"
+                        rel="external"
+                        href="https://github.com/aleitaosantos/alexandreleitao-v1"
+                        ><i class="fa-brands fa-github"></i
+                      ></a>
+                      <a target="_blank" rel="external" href="https://alexandreleitao.netlify.app/"
+                        ><i class="fa-solid fa-up-right-from-square"></i
+                      ></a>
                     </div>
                     <div class="project-title">Website Pessoal</div>
                     <div class="year">2022</div>
